--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ certifi==2025.4.26
 wheel==0.45.1
 gunicorn==20.1.0
 Flask==2.1.1
-pymongo==3.12.0
+pymongo[srv]==3.12.0
 Werkzeug==2.1.2
 flask-pymongo
 
