--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
-certifi==2025.4.26
-wheel==0.45.1
-gunicorn==20.1.0
-Flask==2.1.1
-pymongo[srv]==3.12.0
-Werkzeug==2.1.2
-flask-pymongo
-
+Flask==2.0.1
+flask-pymongo==2.3.0
+pymongo==3.12.0
+python-dotenv==1.1.0
+gunicorn==20.1.0 
 
