--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
+gunicorn==23.0.0
+packaging==25.0
 Flask==2.0.1
 flask-pymongo==2.3.0
 pymongo==3.12.0
-python-dotenv==1.1.0
-gunicorn==20.1.0 
-pymongo[srv]
+
